Refactor user authentication and signup logic; add userAuthchecker and login skipper middleware

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,3 @@
-REGISTER_URI = http://localhost:3000/user/signup
+VITE_REGISTER_URI = http://localhost:3000/user/signup
+VITE_LOGIN_URI = http://localhost:3000/user/login
+VITE_BASE_URI = http://localhost:3000/user
