Implement user logout functionality, enhance user authentication routes, and refactor token verification logic

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,3 +1,4 @@
 VITE_REGISTER_URI = http://localhost:3000/user/signup
 VITE_LOGIN_URI = http://localhost:3000/user/login
-VITE_BASE_URI = http://localhost:3000/user
+VITE_USER_URI = http://localhost:3000/user
+VITE_PROTECTED_URI = http://localhost:3000/api/protected
